--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-china-area-data": "^4.1.2",
+    "element-ui": "^2.13.2",
     "vue": "^2.6.11",
+    "vue-monoplasty-slide-verify": "^1.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -22,6 +25,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less": "^3.11.2",
+    "less-loader": "^6.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
