--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.2",
+    "vant": "^2.8.5",
     "vue": "^2.6.11",
     "vue-monoplasty-slide-verify": "^1.1.2",
     "vue-router": "^3.2.0",
